--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
+	
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Arraxid Ugalde Data Scientist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,6 +18,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
+						<img src="images/pp.jpg" alt="" /></a>
 						<h1>Arraxid Ugalde Hernández<br />
 						Data Scientist</h1>
 						<p> Data Analyst skilled in Python, R, SQL, LaTeX, RMarkdown, Power BI, Tableau 
@@ -55,7 +55,7 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">Dynamic Maps of Mexico in R <br />
+									<h2><a href="#">R: Dynamic Maps of Mexico  <br />
 									A quick look of poverty</a></h2>
 									<p>Using the latest information on the multidimensional measurement of poverty carried out by CONEVAL at the state level (2020) 
 										and utilizing the database provided by INEGI, in the geo-statistical framework product, September 2019, from where we extract the information for our maps.</p>
@@ -84,7 +84,7 @@ The increase in temperature and sea level has numerous adverse effects, one of w
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#"> R: Spatial Distribution of Mortality Rates in Tamaulipas State<br />
+										<h2><a href="#"> R: Spatial Distribution of Mortality COVID-19 Rates in Tamaulipas State<br />
 										</a></h2>
 									</header>
 									<a href="https://rpubs.com/Arra/848119" class="image fit"><img src="images/CovidR.png" alt="" /></a>
@@ -100,93 +100,56 @@ The increase in temperature and sea level has numerous adverse effects, one of w
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date"></span>
+										<h2><a href="#">Word Cloud Analysis of Textual Data in Python<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/Arraxid/Arra-the-Analyst-/blob/main/wordcloud5.ipynb" class="image fit"><img src="images/WCbuniel.png" alt="" /></a>
+									<p>The project involves selecting a collection of texts, such as news articles, reviews, tweets, etc. The data is loaded using pandas, and three different word clouds are generated with various configurations. These configurations can include different stopwords, scales, sizes, and other parameters. The last word cloud is created using a poem from a Luis Buñuel movie:"Los olvidados" in background his face.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/Arraxid/Arra-the-Analyst-/blob/main/wordcloud5.ipynb" class="button">View Poject</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date"></span>
+										<h2><a href="#">Python Analysis of Catalog Content in Movies and TV Series across Streaming Platforms<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/Arraxid/Arra-the-Analyst-/blob/main/pandas%208%20(3).ipynb" class="image fit"><img src="images/stremingtv.png" alt="" /></a>
+									<p>The project aims to analyze the catalog content of movies and TV series across various streaming platforms such as Netflix, HBO, Disney+, and more. Several questions are addressed, including determining whether there are more movies or series in the catalog, identifying the years with the highest content, determining the genre with the most content, finding the unique and non-mixed genres, counting the number of elements in each unique category, examining the distribution of content across platforms, comparing the number of movies and series on each platform, determining the age distribution of the total content, breaking down the age distribution by platform, and creating graphs to showcase the most popular genres on each platform.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/Arraxid/Arra-the-Analyst-/blob/main/pandas%208%20(3).ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<span class="date"></span>
+										<h2><a href="#">Machine Learning Model using a Kobe Bryant Basketball Database<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/Arraxid/Arra-the-Analyst-/blob/main/kmeans%20ML%20(1)%20(1).ipynb" class="image fit"><img src="images/kobiml.png" alt="" /></a>
+									<p>The project involves building a machine learning model in Python using a Kobe Bryant basketball database. The project utilizes various packages and libraries such as mpl_toolkits, matplotlib, sklearn, and more.
+										<p></p>The following tasks are performed in the project:
+										<p></p>•	Importing necessary packages and libraries, including mpl_toolkits, matplotlib, sklearn, etc.
+										<p></p>•	Preprocessing the data using techniques such as data scaling and splitting into training and testing sets.
+										<p></p>•	Implementing machine learning algorithms, such as linear regression, decision trees, random forest, and support vector machines.
+										<p></p>•	Evaluating the model's performance using metrics like mean squared error, R-squared score, accuracy score, f1 score, and confusion matrix.
+										<p></p>•	Performing model optimization using techniques like grid search and cross-validation.
+										<p></p>•	Utilizing clustering algorithms, such as KMeans, for further analysis.
+										.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/Arraxid/Arra-the-Analyst-/blob/main/kmeans%20ML%20(1)%20(1).ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+							
 							</section>
 
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
+
 
 					</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
+
 						</section>
 						<section class="split contact">
 							<section class="alt">
@@ -206,10 +169,8 @@ The increase in temperature and sea level has numerous adverse effects, one of w
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/arraxid-ugalde-hern%C3%A1ndez-5bb3a419b/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+
+									<li><a href="https://github.com/Arraxid/Arra-the-Analyst-" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -217,7 +178,7 @@ The increase in temperature and sea level has numerous adverse effects, one of w
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Arra</li>
 					</div>
 
 			</div>
